--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  freezed_annotation: 1.1.0
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   injectable: ^1.5.3
