--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   injectable: ^1.5.3
   json_annotation: ^4.4.0
   json_serializable: ^6.1.5
-  video_player: ^2.2.18
+  video_player: ^2.3.0
+  share_plus: ^4.0.3
 
 dev_dependencies:
   build_runner: ^2.1.8
