--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,11 @@ dependencies:
   get_it: ^7.2.0
   google_fonts: ^3.0.1
   injectable: ^1.5.3
+  intl: ^0.17.0
   json_annotation: ^4.4.0
   json_serializable: ^6.1.5
-  video_player: ^2.3.0
   share_plus: ^4.0.3
+  video_player: ^2.3.0
 
 dev_dependencies:
   build_runner: ^2.1.8
